<resources>
    <string name="app_name">Bestyn</string>
    <string name="info_email">info@bestyn.app</string>
    <string name="value_not_set">Not set</string>
    <string name="error_no_internet_connection">Connection Error.\nPlease check your connection to continue using the app.</string>
    <string name="bad_connection">Bad Connection</string>
    <string name="bad_connection_description">You have some connection problems.\nPlease reconnect</string>
    <string name="maintenance_mode_title">We\'ll be back soon!</string>
    <string name="maintenance_mode_description">Sorry for the inconvenience but we\'re performing some maintenance at the moment. We\'ll be back online shortly!</string>
    <string name="terms">&terms;</string>
    <string name="policy">&policy;</string>
    <string name="terms_and_policy_full_text">I agree with &terms; and &policy;</string>
    <string name="signup">&signup;</string>
    <string name="do_not_have_an_account_yet">Don’t have an account yet? &signup;</string>
    <string name="signin">&signin;</string>
    <string name="go_to_signin">Go to &signin;</string>
    <string name="dialog_logout_message">Do you really want to Sign Out from your Bestyn?</string>
    <string name="error_category_not_found">There is no such category in the system</string>
    <string name="info_type_birthday">Date of Birth</string>
    <string name="info_type_address">Address</string>
    <string name="info_type_email">Email</string>
    <string name="info_type_gender">Gender</string>
    <string name="resend_email_link"><u>Resend Email</u></string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accepted">accepted</string>
    <string name="congrats">Congratulations! You are now signed into the app</string>
    <string name="msg_email_has_changed">Your email was successfully updated. Please sign in</string>
    <string name="you_already_added_such_type">You already added such type</string>
    <string name="dialog_confirm_changed_email_title">Change email</string>
    <string name="dialog_confirm_changed_email_message">We have sent you a link to your email to change. Please check your Inbox and Spam folders. If you haven\'t received a link, request the link again</string>
    <string name="post_picture_crop_ratio">255:190</string>
    <string name="error_unable_open_file">Unable to open file</string>
    <string name="error_something_went_wrong">Something went wrong. Please try again.</string>
    <string name="create_password_hint">8 symbols minimum</string>
    <string name="title_sign_in">Sign In</string>
    <string name="sign_in_email_label">Email</string>
    <string name="sign_in_email_hint">Enter Email</string>
    <string name="sign_in_password_label">Password</string>
    <string name="sign_in_password_hint">Enter Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_forgot_password_question">Forgot Password?</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_address_label">Address</string>
    <string name="sign_up_address_hint">@string/sign_up_address_label</string>
    <string name="sign_up_full_name_label">Full Name</string>
    <string name="sign_up_full_name_hint">Enter Full Name</string>
    <string name="sign_up_email_label">@string/sign_in_email_label</string>
    <string name="sign_up_email_hint">@string/sign_in_email_hint</string>
    <string name="sign_up_password_label">@string/sign_in_password_label</string>
    <string name="sign_up_password_hint">@string/create_password_hint</string>
    <string name="sign_up_confirm_password_label">Confirm Password</string>
    <string name="sign_up_confirm_password_hint">@string/sign_up_confirm_password_label</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="forgot_password_button">Reset Password</string>
    <string name="forgot_password_email_label">@string/sign_in_email_label</string>
    <string name="forgot_password_email_hint">@string/sign_in_email_hint</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="reset_password_button">Change Password</string>
    <string name="reset_password_label">New Password</string>
    <string name="reset_password_hint">@string/create_password_hint</string>
    <string name="reset_password_confirm_label">Confirm New Password</string>
    <string name="reset_password_confirm_hint">@string/reset_password_confirm_label</string>
    <string name="dialog_confirm_your_email_title">Confirm Email Address</string>
    <string name="dialog_confirm_your_email_message">We have sent you a link to verify your email. Please check your Inbox and Spam folders. If you haven\'t received a link, request the link again</string>
    <string name="dialog_email_not_confirmed_title">Email Not Confirmed</string>
    <string name="dialog_email_not_confirmed_message">We sent you an email but you did not confirm your email address yet. Please confirm it now or ask for another email</string>
    <string name="dialog_password_recover_title">Password recover</string>
    <string name="dialog_password_recover_message">We have sent you a link to your email to recover the password. Please check your Inbox and Spam folders. If you haven\'t received a link, request the link again</string>
    <string name="dialog_password_changed_title">Password changed</string>
    <string name="dialog_password_changed_message">Password was successfully reset! Use it to log into the Bestyn application</string>
    <string name="dialog_user_blocked_title">Your account was blocked</string>
    <string name="dialog_user_blocked_message">Sorry, but your account was blocked by Admin. For more details contact us %s</string>
    <string name="about_app_link">https://bestyn.app</string>
    <string name="title_about">About</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_terms_and_conditions">Terms and conditions</string>
    <string name="bottom_sheet_photo_from_gallery">Select image from Gallery</string>
    <string name="bottom_sheet_video_from_gallery">Select video from Gallery</string>
    <string name="bottom_sheet_start_camera">Start a Camera</string>
    <string name="bottom_sheet_remove_photo">Remove Photo</string>
    <string name="bottom_sheet_take_photo">Take a Photo</string>
    <string name="bottom_sheet_make_video">Make a Video</string>
    <string name="bottom_sheet_file">File</string>
    <string name="bottom_sheet_remove">Remove</string>
    <string name="bottom_sheet_cancel">Cancel</string>
    <string name="bottom_sheet_copy_message">Copy Message</string>
    <string name="bottom_sheet_edit_message">Edit Message</string>
    <string name="bottom_sheet_delete_message">Delete Message </string>
    <string name="create_post_menu_title">Create Post</string>
    <string name="create_post_label_offer">Offer</string>
    <string name="create_post_label_news">News</string>
    <string name="create_post_label_event">Event</string>
    <string name="create_post_label_crime">Crime</string>
    <string name="create_post_label_general">General</string>
    <string name="settings_menu_profile_settings">Profile Settings</string>
    <string name="settings_menu_payment_plans">Payment Plans</string>
    <string name="settings_menu_about">About</string>
    <string name="settings_menu_privacy_policy">Privacy Policy</string>
    <string name="settings_menu_terms">Terms and Conditions</string>
    <string name="settings_menu_logout">Log Out</string>
    <string name="switch_profile_business_type">Business</string>
    <string name="msg_profile_switched">You switched to %s</string>
    <string name="add_business_profile">Add Business Profile</string>
    <string name="business_profile_max_count">(maximum 5)</string>
    <string name="sign_out_yes">Sign Out</string>
    <string name="sign_out_no">Cancel</string>
    <string name="profile_tab_interests">My Interests</string>
    <string name="profile_tab_images">Images</string>
    <string name="profile_interests_label">Selected Interests</string>
    <string name="profile_gender_template">Gender: %s</string>
    <string name="title_profile_setting">Profile Settings</string>
    <string name="edit_profile_info_title">Edit Profile Info</string>
    <string name="edit_profile_email_title">Change Email</string>
    <string name="edit_profile_password_title">Change Password</string>
    <string name="edit_profile_business_content_title">Show Business Content To Me</string>
    <string name="edit_profile_current_password_label">Current Password</string>
    <string name="edit_profile_current_password_hint">@string/edit_profile_current_password_label</string>
    <string name="edit_profile_new_password_label">New Password</string>
    <string name="edit_profile_new_password_hint">@string/create_password_hint</string>
    <string name="edit_profile_confirm_password_label">Confirm New Password</string>
    <string name="edit_profile_confirm_password_hint">@string/edit_profile_confirm_password_label</string>
    <string name="edit_profile_skip_interests">Skip For Now</string>
    <string name="edit_profile_save">Save</string>
    <string name="edit_profile_existing_email">Existing Email</string>
    <string name="edit_profile_new_email">New Email</string>
    <string name="edit_profile_new_email_hint">Enter New email</string>
    <string name="msg_edit_profile_data_saved">Your Profile was successfully updated</string>
    <string name="toast_edit_profile_password_changed">Your password has been successfully changed!</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="date_of_birth_hint">Add your date of birth</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="browser_not_found_msg">No application can handle this request. Please install a web browser or check your URL.</string>
    <string name="posts_filter_all">All</string>
    <string name="posts_filter_general">General</string>
    <string name="posts_filter_media">Media</string>
    <string name="posts_filter_news">News</string>
    <string name="posts_filter_crime">Crimes</string>
    <string name="posts_filter_events">Events</string>
    <string name="posts_filter_offer">Offers</string>
    <string name="posts_filter_business">Business</string>
    <string name="posts_filter_followed">Followed</string>
    <string name="posts_filter_created">Created</string>
    <string name="options_menu_edit_post">Edit</string>
    <string name="options_menu_delete_post">Delete</string>
    <string name="options_menu_unfollow_post">Unfollow Post</string>
    <string name="options_menu_report_post">Report Post</string>
    <string name="options_menu_copy_description">Copy description</string>
    <string name="posts_filter_recommended">For You</string>
    <string name="title_report_screen">Reason of complaint</string>
    <string name="report_user_hint">Why are you reporting this user?</string>
    <string name="report_user_button">Report User</string>
    <string name="report_user_fake_profile">Fake Profile</string>
    <string name="report_user_privacy_violation">Privacy Violation</string>
    <string name="report_user_vandalism">Vandalism</string>
    <string name="report_user_inappropriate_content">Inappropriate content\n(offensive or abusive)</string>
    <string name="report_user_spam">Spam</string>
    <string name="options_menu_set_as_avatar">Set as Avatar</string>
    <string name="cancel">Cancel</string>
    <string name="report_user">Report User</string>
    <string name="unfollow">Unfollow</string>
    <string name="remove_follower">Remove Follower</string>
</resources>