<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:background="@drawable/selector_follower_option"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnRemoveFollower"
                style="@style/FollowerOptionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/remove_follower" />

            <View
                android:id="@+id/dividerRemoveFollower"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/grey_light" />

            <TextView
                android:id="@+id/btnUnfollow"
                style="@style/FollowerOptionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/unfollow" />

            <View
                android:id="@+id/dividerUnfollow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/grey_light" />

            <TextView
                android:id="@+id/btnReportUser"
                style="@style/FollowerOptionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/report_user" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnCancel"
            style="@style/FollowerOptionButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_21"
            android:text="@string/cancel" />
    </LinearLayout>
</layout>