<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cancelable_bottom_sheet_dialog"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCopy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButton"
            android:text="@string/bottom_sheet_copy_message" />

        <View
            android:id="@+id/dividerCopy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_divider_height"
            android:background="@color/bottom_sheet_dialog_divider" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButton"
            android:text="@string/bottom_sheet_edit_message" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_divider_height"
            android:background="@color/bottom_sheet_dialog_divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButtonRemoveButton"
            android:text="@string/bottom_sheet_delete_message" />

    </LinearLayout>
</layout>