<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/llBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cancelable_bottom_sheet_dialog"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectFromGallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButton"
            android:text="@string/bottom_sheet_photo_from_gallery" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_divider_height"
            android:background="@color/bottom_sheet_dialog_divider"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButton"
            android:text="@string/bottom_sheet_start_camera" />

        <View
            android:id="@+id/removeDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_divider_height"
            android:background="@color/bottom_sheet_dialog_divider"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRemove"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_dialog_item_height"
            android:gravity="center"
            style="@style/BottomSheetDialogButtonRemoveButton"
            android:text="@string/bottom_sheet_remove_photo"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</layout>